# partial-data

./: .gitignore  README.md  pyproject.toml
object_detection/: Dockerfile  spotty.yaml
object_detection/datasets/partial_v1/: generate_annotation_dataset.ipynb  generate_dataset.ipynb  generate_tfrecord_datasets.ipynb
object_detection/datasets/partial_v2/: generate_annotation_dataset.ipynb  generate_tfrecord_datasets.ipynb
object_detection/datasets/partial_v3/: generate_tfrecord_datasets.ipynb
object_detection/trained_models/: README.md
object_detection/trained_models/run1/: run_model_main.sh  ssd_mobilenet_v1_coco.config
object_detection/trained_models/run2/: export_inference_graph.sh  infer_detections.sh
object_detection/trained_models/run2/evaluate/: metrics.csv
object_detection/trained_models/run3/: evaluate_detections.sh  infer_detections.sh  run_model_main.sh  ssd_mobilenet_v1_coco.config
object_detection/trained_models/run3/evaluate/: input_config.pbtxt  metrics.csv
object_detection/trained_models/run4/: export_inference_graph.sh  infer_detections.sh  ssd_mobilenet_v1_coco.config
object_detection/trained_models/run4/evaluate/: metrics.csv
object_detection/trained_models/run5/: evaluate_detections.sh  run_model_main.sh  ssd_mobilenet_v1_coco.config
object_detection/trained_models/run6/: run_model_main.sh  ssd_mobilenet_v1_coco.config
partial_data/: coco.py  image_utils.py  losses.py  standard_fields.py  tf_example_decoder.py  tfrecord.py  visualization.py
tests/: test_losses.py  test_tf_example_decoder.py
(+3 files in other folders)
