[tool.poetry]
name = "partial-data"
version = "0.1.0"
description = ""
authors = ["staubda <david.staub@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
tensorflow = "1.14.0"
numpy = "1.17.1"
Cython = "^0.29.20"
contextlib2 = "^0.6.0"
pillow = "^7.1.2"
lxml = "^4.5.1"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
pycocotools = "^2.0.0"
pathlib = "^1.0.1"
opencv-python = "^4.2.0"
pandas = "^1.0.4"
tqdm = "^4.46.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
spotty = "^1.2.4"
jupyterlab = "^2.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
